tests/positive/ns_import.osc
use "../libs/ns_helper.osc" as helper

fn! main() {
    let x: i32 = helper.add(3, 4);
    let y: i32 = helper.mul(x, 2);
    println("{x} {y}");
}
