tests/negative/implicit_coercion.osc
// EXPECT ERROR: Implicit coercion — i32 used where f64 expected without cast
// There are no implicit type coercions in Oscan.

fn! main() {
    let x: i32 = 5;
    let y: f64 = x;
}
